Issue #7865: The close() method of :mod:`io` objects should not swallow exceptions raised by the implicit flush().  Also ensure that calling close() several times is supported.  Patch by Pascal Chambon.